@@ -1,7 +1,7 @@
 Package: DPQmpfr
 Title: DPQ (Density, Probability, Quantile) Distribution Computations using MPFR
-Version: 0.3-0
-Date: 2020-11-23
+Version: 0.3-1
+Date: 2021-05-07
 Authors@R: person("Martin","Maechler", role=c("aut","cre"),
    email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
 Description: An extension to the 'DPQ' package with computations for 'DPQ'
@@ -9,7 +9,8 @@ Description: An extension to the 'DPQ' package with computations for 'DPQ'
   the functions here partly use the 'Rmpfr' package and hence the
   underlying 'MPFR' and 'GMP' C libraries.
 Depends: R (>= 3.6.0)
-Imports: DPQ (>= 0.4-2), Rmpfr, gmp, stats, graphics, methods, utils
-Suggests: sfsmisc
+Imports: DPQ (>= 0.4-3), Rmpfr, gmp, stats, graphics, methods, utils
+Suggests: sfsmisc, Matrix
+SuggestsNote: Matrix for its test-tools-1.R
 License: GPL (>= 2)
 Encoding: UTF-8
