@@ -4,6 +4,16 @@
 \title{DPQmpfr News}
 \encoding{UTF-8}
 
+\section{Version 0.3-1 (2021-03-12, svn r...)}{
+  \subsection{NEW FEATURES}{
+    \itemize{
+      \item \code{stirlerrM(n)} and \code{stirlerrSer(n,k)} providing
+      Stirling's formula approximation errors for bigrational ("bigz") or "mpfr" numbers.
+
+    }
+  }
+}
+
 \section{Version 0.3-0 (2020-11-23, svn r156)}{
   \subsection{NEW FEATURES}{
     \itemize{
